# bashwave

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
include/: include.hpp  internal.hpp  settings.hpp  tools.hpp
src/: main.cpp
